--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ cache:
   directories:
     - $HOME/.composer/cache
 
+services:
+  - mongodb
+
 before_install:
   - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - travis_retry composer self
