--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,20 @@
 language: php
 
-php:
-  - 5.6
-
 sudo: false
 
 cache:
   directories:
     - $HOME/.composer/cache
+
+matrix:
+  fast_finish: true
+  include:
+    - php: 5.6
+    - php: 7
+    - php: hhvm
+  allow_failures:
+    - php: 7
+    - php: hhvm
 
 services:
   - mongodb
